added qtcreator project for easier debugging

--- a/prototype/V1.0/app/vfoknob_lib/Makefile
+++ b/prototype/V1.0/app/vfoknob_lib/Makefile
@@ -2,7 +2,7 @@ libvfoknob.a: libvfoknob.o
 	ar rcs $@ $^
 
 libvfoknob.o: vfo_knob_lib.c vfo_knob_lib.h
-	gcc -c -o $@ $<
+	gcc -g -c -o $@ $<
 
 install: libvfoknob.a
 	mkdir -p /usr/lib/libvfoknob
